# rash

./: .codecov.yml  .gitignore  CMakeLists.txt  README.md
.github/workflows/: automated-tests.yml  codeql.yml
src/: CMakeLists.txt  rash.c  rash.h
tests/: CMakeLists.txt  test.c
